# rust-todo-webapp

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
static/: index.html
